# langchain-adf-copilot-cli

./: .env.example  .gitignore  README.md  adf_config.json  pyproject.toml
.claude/skills/find-pipelines-by-service/: SKILL.md
.claude/skills/test-linked-service/: SKILL.md
adf_agent/: __init__.py  agent.py  azure_claude.py  cli.py  context.py  gatekeeper.py  prompts.py  skill_loader.py
adf_agent/observability/: __init__.py
adf_agent/stream/: __init__.py  emitter.py  formatter.py  token_tracker.py  utils.py
adf_agent/tools/: __init__.py  _exec_runtime.py  adf_tools.py  azure_adf_client.py  general_tools.py  skill_tools.py
docs/: prompt-caching.md  token-tracking.md
